# 3DViewer

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/model/: basefilereader.h  gifgenerator.cc  gifgenerator.h  objreader.cc  objreader.h  objreaderfast2.cc  objreaderfast2.h  scene.cc  scene.h  settings.cc  settings.h  transform_matrix.cc  transform_matrix_builder.cc  transform_matrix_builder.h
src/view/: mainwindow.cc  mainwindow.h  mainwindow.ui  scenedrawer.cc  scenedrawer.h  scenedrawerbase.h
tests/: CMakeLists.txt  transformation_test.cc
